[tool.poetry]
name = "bscan"
version = "0.1.0"
description = "Simple tool to make your camera a scanner."
authors = ["Sylvain Roy <sylvain.roy@m4x.org>"]
license = "GPL-2.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
opencv-contrib-python = "^4.2.0"
numpy = "^1.18.3"
img2pdf = "^0.3.4"
jupyter = "^1.0.0"
matplotlib = "^3.2.1"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
